v2.75.6 Icons of rules in the race schedule table no longer wrap

--- a/client/src/components/RulesBox/RulesBox.module.css
+++ b/client/src/components/RulesBox/RulesBox.module.css
@@ -11,3 +11,6 @@
 .mb15 {
   margin-bottom: 15px;
 }
+.nowrap {
+  flex-wrap: nowrap;
+}
